task-1: home - form

--- a/src/pages/form/form.html
+++ b/src/pages/form/form.html
@@ -7,12 +7,20 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>form</ion-title>
+    <ion-title>Registro</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <div>
+    <ion-label class="label_title">
+      nombre
+    </ion-label>
+    <ion-item>
+      <ion-input [(ngModel)]="person_id" type="number" placeholder="Cedula"></ion-input>
+    </ion-item>
+    <button class="start_button" (click)="openPage()">Empezar</button>
+  </div>
 </ion-content>
