--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,6 @@
     <ion-item>
       <ion-input [(ngModel)]="person_id" type="number" placeholder="Cedula"></ion-input>
     </ion-item>
-    <button class="start_button" (click)="openPage()">Empezar</button>
+    <button class="start_button" (click)="start()">Empezar</button>
   </div>
 </ion-content>
