task-1: score board - sport activity

--- a/src/pages/sport-activity/sport-activity.html
+++ b/src/pages/sport-activity/sport-activity.html
@@ -12,6 +12,7 @@
 
 </ion-header>
 
+<div class="map2" id="map2" [ngStyle]="{'height': model_name=='TaskRoute' ? '100%' : 'calc(100% - 53px)' }"></div>
 
 <ion-content padding>
 
