--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 
 <ion-content padding>
   <div class="form_container">
-    <h1 class="label_title">
+    <h1 class="tittle_big">
       Bienvenido
     </h1>
     <ion-item>
