--- a/src/pages/score-board/score-board.html
+++ b/src/pages/score-board/score-board.html
@@ -12,7 +12,22 @@
 
 </ion-header>
 
-
 <ion-content padding>
+  <div class="fecha" *ngIf="today">{{today.getDate()}} / {{months[today.getMonth()]}} / {{today.getFullYear()}}</div>
+  <div class="tittle_big">
+    <h1>TOP 3 FACULTADES</h1>
+  </div>
+  <div class="scores">
+    <div class="score" *ngFor="let fac of facultades">
+      <p>{{fac.nombre}} ............ {{fac.score}}</p>
+    </div>
+  </div>
+  <div class="own">
+    <div class="ownPoints"><span>Mi puntaje: </span>{{user.score}}</div>
+    <div class="myFactultyPoints"><span>Puntaje mi facultad: </span>{{user.facultad.score}}</div>  
+  </div>
+  
+  <button class="start_button" (click)="openActivity()">Realizar actividad fisica</button>
 
+  <button class="start_button" (click)="openCardiac()">Medir Ritmo Cardiaco</button>
 </ion-content>
