--- a/src/pages/sport-activity/sport-activity.html
+++ b/src/pages/sport-activity/sport-activity.html
@@ -40,7 +40,7 @@
       <button class="start_button" (click)="openCardiac()">Medir Ritmo Cardiaco</button>
     </ion-col>
     <ion-col col-6>
-      <button class="start_button" (click)="startTime()">{{actividad}}</button>
+      <button class="start_button" (click)="startActivity()">{{actividad}}</button>
     </ion-col>
   </ion-row>
 </ion-content>
