Agregar peso y altitud

--- a/src/pages/form/form.html
+++ b/src/pages/form/form.html
@@ -34,6 +34,9 @@
     <ion-item class="form_element">
       <ion-input [(ngModel)]="persona.altura" type="text" placeholder="Altura"></ion-input>
     </ion-item>
+    <ion-item class="form_element">
+      <ion-input [(ngModel)]="persona.peso" type="text" placeholder="Peso"></ion-input>
+    </ion-item>
     <ion-item type="number" class="form_element">
       <ion-input [(ngModel)]="persona.edad" type="text" placeholder="Edad"></ion-input>
     </ion-item>
