--- a/src/pages/form/form.html
+++ b/src/pages/form/form.html
@@ -1,20 +1,8 @@
-<!--
-  Generated template for the FormPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Registro</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
   <div class="form_container">
+    <div class="title">
+      <h3>Formulario de registro</h3>
+    </div>
     <ion-item class="form_element">
       <ion-input [(ngModel)]="persona.nombres" type="text" placeholder="Nombres"></ion-input>
     </ion-item>
@@ -24,8 +12,7 @@
     <ion-item class="form_select">
       <ion-label floating>Facultad</ion-label>
       <ion-select [(ngModel)]="persona.facultad">
-        <ion-option value="Ingenieria">Ingenieria</ion-option>
-        <ion-option value="Psicologia">Psicologia</ion-option>
+        <ion-option *ngFor="let fac of facultades" value="{{fac}}">{{fac}}</ion-option>
       </ion-select>
     </ion-item>
     <ion-item class="form_element">
@@ -47,7 +34,6 @@
         <ion-option value="Femenino">Mujer</ion-option>
       </ion-select>
     </ion-item>
-
-    <button class="start_button" (click)="openScoreBoard()">Empezar</button>
   </div>
+  <button class="start_button" (click)="openScoreBoard()">Empezar</button>
 </ion-content>
