--- a/src/pages/score-board/score-board.html
+++ b/src/pages/score-board/score-board.html
@@ -1,33 +1,41 @@
-<!--
-  Generated template for the ScoreBoardPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>score-board</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
 <ion-content padding>
-  <div class="fecha" *ngIf="today">{{today.getDate()}} / {{months[today.getMonth()]}} / {{today.getFullYear()}}</div>
+  <div class="title">
+    <h3>Formulario de registro</h3>
+  </div>
   <div class="tittle_big">
     <h1>TOP 3 FACULTADES</h1>
   </div>
-  <div class="scores">
-    <div class="score" *ngFor="let fac of facultades">
-      <p>{{fac.nombre}} ............ {{fac.score}}</p>
-    </div>
-  </div>
+  <div class="fecha" *ngIf="today">{{today.getDate()}} / {{months[today.getMonth()]}} / {{today.getFullYear()}}</div>
+  
+  <ion-row>
+    <ion-col col-6>
+      <div class="scores">
+        <div class="score" *ngFor="let fac of facultades">
+          <p>{{fac.nombre}} ............ {{fac.score}}</p>
+        </div>
+      </div>
+    </ion-col>
+    <ion-col col-6>
+      <div class="perfil">
+        <img *ngIf="user.genero == 'Maculino'" src="../assets/imgs/guy.png" alt="">
+        <img *ngIf="user.genero == 'Femenino'" src="../assets/imgs/girl.png" alt="">
+      </div>
+    </ion-col>
+  </ion-row>
+  
   <div class="own">
-    <div class="ownPoints"><span>Mi puntaje: </span>{{user.score}}</div>
-    <div class="myFactultyPoints"><span>Puntaje mi facultad: </span>{{user.facultad.score}}</div>  
+    <ion-row>
+      <ion-col col-6>
+        <div class="myFactultyPoints"><span>Puntaje mi facultad: </span>{{user.facultad.score}}</div>  
+      </ion-col>
+      <ion-col col-6>
+        <div class="ownPoints"><span>Mi puntaje: </span>{{user.score}}</div>
+      </ion-col>
+    </ion-row>
   </div>
   
-  <button class="start_button" (click)="openActivity()">Realizar actividad fisica</button>
-
-  <button class="start_button" (click)="openCardiac()">Medir Ritmo Cardiaco</button>
+  <div class="buttons">
+      <button class="start_button" (click)="openActivity()">Realizar actividad fisica</button>
+      <button class="start_button" (click)="openCardiac()">Medir Ritmo Cardiaco</button>
+  </div>
 </ion-content>
