--- a/src/pages/form/form.html
+++ b/src/pages/form/form.html
@@ -30,8 +30,8 @@
     <ion-item class="form_select">
       <ion-label floating>Genero</ion-label>
       <ion-select [(ngModel)]="persona.genero">
-        <ion-option value="Maculino">Hombre</ion-option>
-        <ion-option value="Femenino">Mujer</ion-option>
+        <ion-option value="Masculino">Masculino</ion-option>
+        <ion-option value="Femenino">Femenino</ion-option>
       </ion-select>
     </ion-item>
   </div>
