--- a/src/pages/sport-activity/sport-activity.html
+++ b/src/pages/sport-activity/sport-activity.html
@@ -30,7 +30,7 @@
 
   <ion-row class="buttons">
     <ion-col col-6>
-      <button class="start_button" (click)="openCardiac()">Medir Ritmo Cardiaco</button>
+      <button class="start_button" (click)="volver()">volver</button>
     </ion-col>
     <ion-col col-6>
       <button class="start_button" (click)="startActivity()">{{actividad}}</button>
