--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,10 +2,10 @@
   <img src="../assets/imgs/UEBlogo.png" alt="UEB" class="logo">
   <div class="form_container">
     <h1 color='dark' class="tittle_big">
-      Sport Psicology
+      Sport Psychology
     </h1>
     <ion-item class="cedula">
-      <ion-label color='dark' position="stacked">Cedula</ion-label>
+      <ion-label color='dark' position="stacked">cédula</ion-label>
       <ion-input [(ngModel)]="person_id" type="number" ></ion-input>
     </ion-item>
     <button class="start_button" (click)="start()">Empezar</button>
