--- a/src/pages/cardiac/cardiac.html
+++ b/src/pages/cardiac/cardiac.html
@@ -1,18 +1,17 @@
-<!--
-  Generated template for the CardiacPage page.
+<ion-content>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+    <div class="glass">
+        <p class="title">Medir Ritmo Cardiaco <br><span>Estatico</span></p>
+        <h1 class="ritm_value">{{value}}</h1>
 
-  <ion-navbar>
-    <ion-title>cardiac</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
+        <p *ngIf="!connectionB" class="offline"><ion-icon name="bluetooth"></ion-icon>Sin conexion</p>
+        <p *ngIf="connectionB" class="online"><ion-icon name="bluetooth"></ion-icon>Conectado</p>
+    
+        <button *ngIf="!measuring" class="start_button power" (click)="read_cardiac()"><ion-icon name="pulse"></ion-icon></button>
+        <button *ngIf="measuring" class="start_button powerOn" ><ion-icon name="pulse"></ion-icon></button>
+        <button *ngIf="!measuring" (click)="back()" class="start_button">Volver</button>
+        <button disabled *ngIf="measuring" class="start_button">Volver</button>
+    
+    </div>
 
 </ion-content>
