--- a/src/pages/form/form.html
+++ b/src/pages/form/form.html
@@ -15,8 +15,20 @@
         <ion-option *ngFor="let fac of facultades" value="{{fac}}">{{fac}}</ion-option>
       </ion-select>
     </ion-item>
-    <ion-item class="form_element">
-      <ion-input [(ngModel)]="persona.carrera" type="text" placeholder="Carrera"></ion-input>
+    <ion-item class="form_select">
+      <ion-label floating>Semestre</ion-label>
+      <ion-select [(ngModel)]="persona.semestre">
+        <ion-option value="1">1</ion-option>
+        <ion-option value="2">2</ion-option>
+        <ion-option value="3">3</ion-option>
+        <ion-option value="4">4</ion-option>
+        <ion-option value="5">5</ion-option>
+        <ion-option value="6">6</ion-option>
+        <ion-option value="7">7</ion-option>
+        <ion-option value="8">8</ion-option>
+        <ion-option value="9">9</ion-option>
+        <ion-option value="10">10</ion-option>
+      </ion-select>
     </ion-item>
     <ion-row>
       <ion-col col-5>
@@ -27,7 +39,7 @@
       <ion-col col-1><p class="dotAndKg">.</p></ion-col>
       <ion-col col-5>
         <ion-item class="form_element">
-          <ion-input class="altura2" [(ngModel)]="altura2" type="tel" maxlength='2' placeholder="Altura"></ion-input>
+          <ion-input class="altura2" [(ngModel)]="altura2" (blur)="onBlur($event)" type="tel" maxlength='2' placeholder="Altura"></ion-input>
         </ion-item>   
       </ion-col>
       <ion-col col-1><p class="dotAndKg">m</p></ion-col>
@@ -35,7 +47,7 @@
     <ion-row>
         <ion-col>
           <ion-item class="form_element">
-              <ion-input [(ngModel)]="persona.peso" type="tel" maxlength='3' placeholder="Peso"></ion-input>
+              <ion-input [(ngModel)]="persona.peso" (blur)="onBlur($event)" type="tel" maxlength='3' placeholder="Peso"></ion-input>
             </ion-item>
         </ion-col>
         <ion-col col-1><p class="dotAndKg">Kg</p></ion-col>
@@ -44,7 +56,7 @@
       <ion-input [(ngModel)]="persona.edad" type="tel" maxlength='2' placeholder="Edad"></ion-input>
     </ion-item>
     <ion-item class="form_select">
-      <ion-label floating>Genero</ion-label>
+      <ion-label floating>Género</ion-label>
       <ion-select [(ngModel)]="persona.genero">
         <ion-option value="Masculino">Masculino</ion-option>
         <ion-option value="Femenino">Femenino</ion-option>
