--- a/src/pages/score-board/score-board.html
+++ b/src/pages/score-board/score-board.html
@@ -1,7 +1,4 @@
 <ion-content padding>
-  <div class="title">
-    <h3>Formulario de registro</h3>
-  </div>
   <div class="tittle_big">
     <h1>TOP 3 FACULTADES</h1>
   </div>
@@ -22,11 +19,30 @@
       </div>
     </ion-col>
   </ion-row>
+  <div *ngIf='changing_weight' (click)="changeW()" class='darkBackground'></div>
+  <div class='weight_show' *ngIf='changing_weight'>
+          <ion-row>
+          <ion-col col-2></ion-col>
+          <ion-col col-8>
+            <ion-item class="form_element" style='text-align: center'>
+              <ion-input [(ngModel)]="person.peso"  type="tel" maxlength='3' placeholder="Peso"></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col col-2></ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-2></ion-col>
+          <ion-col col-8>
+           <button class="start_button mass_button" (click)="changeMass()">Cambiar peso</button>
+          </ion-col>
+          <ion-col col-2></ion-col>
+        </ion-row>
+        </div>
   
   <div class="own">
     <ion-row>
       <ion-col col-6>
-        <div *ngIf="user.facultad && user.facultad.puntos" class="myFactultyPoints"><span>Puntaje mi facultad: </span>{{user.facultad.puntos}}</div>  
+        <div *ngIf="user.facultad" class="myFactultyPoints"><span>Puntaje mi facultad: </span>{{user.facultad.puntos}}</div>  
       </ion-col>
       <ion-col col-6>
         <div class="ownPoints"><span>Mi puntaje: </span>{{user.score}}</div>
@@ -35,8 +51,10 @@
   </div>
   
   <div class="buttons">
-      <button class="start_button" (click)="openActivity()">Realizar actividad fisica</button>
-      <button class="start_button" (click)="openCardiac()">Medir Ritmo Cardiaco</button>
+      <button class="start_button weight_buttom" (click)="changeW()">cambiar Peso</button>
+      <button class="start_button weight_page_buttom" (click)="pageW()"><ion-icon name="stats"></ion-icon></button>
+      <button class="start_button hearth_page_buttom" (click)="pageH()"><ion-icon name="heart"></ion-icon></button>
+      <button class="start_button" (click)="openActivity()">Realizar actividad física</button>
       <button class="start_button" (click)="end()">Finalizar</button>
   </div>
 </ion-content>
